objects/News_Announcements__c.object
<CustomObject><fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>DisplayDate__c</fullName>
        <formula>CASE(MONTH(DATEVALUE(LastModifiedDate)),
1, "January",
2, "February",
3, "March",
4, "April",
5, "May",
6, "June",
7, "July",
8, "August",
9, "September",
10, "October",
11, "November",
12, "December",
"")+" "+TEXT(DAY(DATEVALUE(LastModifiedDate)))+", "+TEXT(YEAR(DATEVALUE(LastModifiedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Modified</label>
        <type>Text</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <description>This field is used by the Data Packs tool to identify each record and update it with the corresponding entry in the Data Pack.</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>External_URL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External URL</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ImageAttachmentId__c</fullName>
        <label>ImageAttachmentId</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(SUBSTITUTE(LEFT($Api.Partner_Server_URL_260, FIND( '/services',$Api.Partner_Server_URL_260)), "/sfsites/c", "") &amp; "servlet/servlet.FileDownload?file=" &amp;  ImageAttachmentId__c , "No Image",125,250)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For best results image size of 160 X 80 px is recommended.</inlineHelpText>
        <label>Image</label>
        <type>Text</type>
    </fields><fields>
        <fullName>News_Channel__c</fullName>
        <label>News Channel</label>
        <picklist>
            <picklistValues>
                <fullName>News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Teaser__c</fullName>
        <description>Enter first line of the content</description>
        <inlineHelpText>Copy the first line of the content</inlineHelpText>
        <label>Teaser</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>URL__c</fullName>
        <description>Must have a fully qualified url starting with http:// or https://</description>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>News_AnnouncementsLayout</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Recent News</label><nameField>
        <displayFormat>N-{00000}</displayFormat>
        <label>Article #</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Recent News</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Title__c</columns>
        <columns>News_Channel__c</columns>
        <columns>Source__c</columns>
        <columns>External_URL__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>